fix:host swagger part 4
